--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "openai>=1.75.0",
     "pydantic>=2.11.3",
     "pyyaml>=6.0.2",
+    "requests>=2.32.3",
     "rich>=13.7.0",
     "trio>=0.30.0",
 ]
